--- a/css-learning/Images/exercise/e1/styles.css
+++ b/css-learning/Images/exercise/e1/styles.css
@@ -8,14 +8,21 @@ img{
     object-fit:cover;
 }
 
+
 h1{
-    color:white;
-    font-size:6rem;
+    color: white;
+    font-size: 3rem;
+    position: absolute;
+    bottom: 50%;
+    left: 24%;
+    
 }
 
-.content{
+p{
     position: absolute;
-    bottom:50vh;
-    left:50vw;
-  
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    bottom: 39%;
+    font-size: 2rem;
+    left: 42%;
 }
