--- a/css-learning/Images/exercise/e2/styles.css
+++ b/css-learning/Images/exercise/e2/styles.css
@@ -3,27 +3,36 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.menu{
-    
+.menu {
+    list-style:none;
+    margin:0;
     display: flex;
     flex-direction: column;
     background-color: #2a2138;
     align-items: center;
-  
-}
-.menu ul{
-    list-style:none;
-    
+    padding:1rem;
 }
 
 .menu a{
     text-decoration: none;
     color:white;
-}
+    font-size:2rem;
+   
+} 
 
-li:hover{
+.menu a:hover{
    
     background-color: #221a2e;
+    border-radius:2rem;
+    padding:0.5rem;
 }
 
-@media screen and (min-width:)
+@media screen and (min-width:500px)
+{
+    .menu{
+        width:20vw;
+        height:100vh;
+        align-items: flex-start;
+    }
+}
+
